Mon Dec 16 16:45:08 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe-gcc-filter.in: Compatibility test (do we use gnat >= 4.0).

Sat Nov 30 20:21:47 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_stubs.adb, xe_utils.ads, xe_utils.adb: Change DSA
 	hierarchy. dsa/private contains stubs (as caller and receiver can
 	designate a configuration name or a partition
 	name). dsa/<configuration>/<partition> contains all the files (or
 	links) to build a partition. Move compilation of s-garela into
	Build_Partition to keep consistent. Check that s-garela is
	up-to-date and recompile when Force_Compilation is set.

Fri Nov 29 16:13:41 1996  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* xe_parse.adb: Incorrect Cut/Paste.

Fri Nov 29 12:40:47 1996  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe.ads, xe.adb, xe_parse.adb, xe_stubs.adb, xe_back.adb: Add a
 	new partition attribute Permanent and all the needed operations.

	* xe.ads, xe.adb, xe_build.adb: Use XE subprograms to build
	GNATDIST report.

Fri Nov 29 11:47:57 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Generate a call to Set_Boot_Server in elaboration
	  file if protocol has been specified in configuration file.

	* xe.ads: Default starter is now Ada instead of Shell.

Thu Nov 28 23:56:12 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: New flags.

	* xe_utils.adb: Compile with -gnatg.

	* xe_stubs.adb: Generation and compilation of new elaboration file.

Wed Nov 27 18:07:17 1996  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: New argument to Write_* functions with file
	  descriptors to allow duplicate output when generating scripts.

	* xe_utils.adb: Fixed the way script output was handled.

	* xe_stubs.adb: Write on standard out (if needed) as well as in
	  generated file.

	* xe_lead.adb: Use "__EOF__" instead of "EOF" and do not
	  unconditionnally close output.

	* xe_check.adb: Generates "gnatmake -c ..." commands.
