@@ -3,12 +3,11 @@
 
 PROG=`basename $0`
 NAME=/tmp/${PROG}.$$
-mv -f $1 ${NAME}
 SED=@SED@
 AWK=@AWK@
 
-grep -i "package RCI_Cache is new" ${NAME} >/dev/null 2>&1
-if [ "$?" = "1" ]; then
+if grep -i "system.rpc.general" $1 >/dev/null 2>&1; then
+mv -f $1 ${NAME}
 ${SED} "
 s/^.*system\.rpc\.general.*$//g
 s/register_server_elaboration/register_receiving_stub/g
@@ -52,7 +51,7 @@ skipline == 0 {print $0}
 ${SED} -e "
 s/get_active_partition_id/RCI_Cache.get_active_partition_id/g
 s/get_rci_package_receiver/RCI_Cache.get_rci_package_receiver/g
-fi
 s/__quote__/\\'/g
 " >$1
 rm -f ${NAME}
+fi
